cargo-dist/tests/snapshots/lib_manifest_slash.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
{
  "dist_version": "1.0.0-FAKEVERSION",
  "announcement_tag": "CENSORED",
  "announcement_tag_is_implicit": false,
  "announcement_is_prerelease": "CENSORED"
  "announcement_title": "CENSORED"
  "announcement_changelog": "CENSORED"
  "announcement_github_body": "CENSORED"
  "releases": [
    {
      "app_name": "cargo-dist-schema",
      "app_version": "1.0.0-FAKEVERSION",
      "env": {
        "install_dir_env_var": "CARGO_DIST_SCHEMA_INSTALL_DIR",
        "unmanaged_dir_env_var": "CARGO_DIST_SCHEMA_UNMANAGED_INSTALL",
        "disable_update_env_var": "CARGO_DIST_SCHEMA_DISABLE_UPDATE",
        "no_modify_path_env_var": "CARGO_DIST_SCHEMA_NO_MODIFY_PATH",
        "github_base_url_env_var": "CARGO_DIST_SCHEMA_INSTALLER_GITHUB_BASE_URL",
        "ghe_base_url_env_var": "CARGO_DIST_SCHEMA_INSTALLER_GHE_BASE_URL"
      },
      "display_name": "cargo-dist-schema",
      "display": true,
      "hosting": {
        "github": {
          "artifact_base_url": "https://github.com",
          "artifact_download_path": "/axodotdev/cargo-dist/releases/download/cargo-dist-schema/v1.0.0-FAKEVERSION",
          "artifact_download_url": "https://github.com/axodotdev/cargo-dist/releases/download/cargo-dist-schema/v1.0.0-FAKEVERSION",
          "owner": "axodotdev",
          "repo": "cargo-dist"
        },
        "axodotdev": {
          "package": "cargo-dist-schema",
          "public_id": "fake-id-do-not-upload",
          "set_download_url": "https://fake.axo.dev/faker/cargo-dist-schema/fake-id-do-not-upload",
          "upload_url": null,
          "release_url": null,
          "announce_url": null
        }
      }
    }
  ],
  "systems": {
    "plan:all:": {
      "id": "plan:all:",
      "cargo_version_line": "CENSORED"
      "build_environment": "indeterminate"
    }
  },
  "publish_prereleases": false,
  "force_latest": false,
  "ci": {
    "github": {
      "artifacts_matrix": {},
      "pr_run_mode": "plan"
    }
  },
  "linkage": [],
  "upload_files": [],
  "github_attestations": true
}

stderr:
INFO: You've enabled Axo Releases, which is currently in Closed Beta.
If you haven't yet signed up, please join our discord
(https://discord.gg/ECnWuUUXQk) or message hello@axo.dev to get started!
