cargo-dist/tests/snapshots/short-help.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
Shippable packaging for Rust

Usage: cargo dist [OPTIONS]
       cargo dist <COMMAND>

Commands:
  build       Build artifacts
  init        Setup or update cargo-dist
  generate    Generate one or more pieces of configuration
  linkage     Report on the dynamic libraries used by the built artifacts
  manifest    Generate the final build manifest without running any builds
  plan        Get a plan of what to build (and check project status)
  host        Host artifacts
  selfupdate  Performs a self-update, if a new version is available, and then 'init'
  help        Print this message or the help of the given subcommand(s)

Options:
      --force-tag  Force package versions to match the tag
  -h, --help       Print help (see more with '--help')
  -V, --version    Print version

GLOBAL OPTIONS:
  -v, --verbose <VERBOSE>              How verbose logging should be (log level) [default: warn] [possible values: off, error, warn, info, debug, trace]
  -o, --output-format <OUTPUT_FORMAT>  The format of the output [default: human] [possible values: human, json]
      --no-local-paths                 Strip local paths from output (e.g. in the dist manifest json)
  -t, --target <TARGET>                Target triples we want to build
  -i, --installer <INSTALLER>          Installers we want to build [possible values: shell, powershell, npm, homebrew, msi]
  -c, --ci <CI>                        CI we want to support [possible values: github]
      --tag <TAG>                      The (git) tag to use for the Announcement that each invocation of cargo-dist is performing
      --allow-dirty                    Allow generated files like CI scripts to be out of date

stderr:
